@@ -1,4 +1,7 @@
 <html>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
 <center><img src="images/title2.gif">
 <br><font size=+1><br>
