@@ -3,7 +3,7 @@
 <title>
 dialup administration</title>
 </head>
-	<frameset cols="122,*" border="0" frameborder="0" framespacing="0">
+	<frameset cols="130,*" border="0" frameborder="0" framespacing="0">
 		<frame	name="buttons" src="buttons.php3" marginwidth="8"
 			marginheight="8" noresize >
 		<frame	name="content" src="content.html" marginwidth="8"
